2005-02-06  Atsushi Enomoto <atsushi@ximian.com>

	* RdpObjects.cs : provide error type name. removed commented code block.

2005-02-06  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : MakeOneOrMore() did not always set up internal table.

2004-12-06  Atsushi Enomoto <atsushi@ximian.com>

	* Util.cs : trivial debug string fix.
	* RdpPattern.cs : trivial formatting fix.

2004-12-06  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : The last attribute stuff broke usual validation wrt
	  global attributes.

2004-12-06  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : fixed setupTable(). Avoid boxing.

2004-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : RdpAttribute now omits value check when the argument
	  value is null. It is useful to get labels.

2004-12-05  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPattern.cs : added GetLabels().

2004-06-25  Atsushi Enomoto <atsushi@ximian.com>

	* RdpContentType.cs, RdpNameClass.cs, RdpObjects.cs, RdpPatterns.cs,
	  Util.cs : added novell license term.

2004-06-21  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs : Fixed ExpandRef() that caused incorrect nest error.

2004-06-17  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs : Quick workaround for infinite loop happening in
	  some kind of recursive expansion.

2004-03-12  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs : Fixed TextDeriv() to allow whitespace text nodes
	  except for Data and Value (though they are overridden).

2004-02-25  Atsushi Enomoto <atsushi@ximian.com>

	* Added RdpContextType.cs.
	* RdpNameClasses.cs,
	  RdpObjects.cs,
	  RdpPatterns.cs,
	  Util.cs : radical design change (too many things to write up).

2003-05-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* RdpPattern.cs : Some method name capitalization.
	  Fixed RdpInterleave.StartTagOpenDeriv() which is logically incorrect.

2003-05-05  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>
