@@ -1,3 +1,8 @@
+2005-03-01  Atsushi Enomoto <atsushi@ximian.com>
+
+	* RelaxngPattern.cs : RdpUnresolvedRef should process empty/notAllowed
+	  elimination on its referenced pattern.
+
 2005-02-27  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XsdDatatypeProvider.cs : Added simpleType parameter support.
